View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030837 | Open CASCADE | OCCT:Data Exchange | public | 2019-07-10 23:21 | 2019-08-15 17:48 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030837: Data Exchange, XCAFPrs_DocumentExplorer - fix misprint in XCAFPrs_DocumentExplorerFlags_NoStyle check | ||||
Description | Misprint in XCAFPrs_DocumentExplorer::Init() lead to reversed XCAFPrs_DocumentExplorerFlags_NoStyle processing. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR30837 has been created by kgv. SHA-1: e84724a2289d04007eeb72f634ce0ef0cdb1a24e Detailed log of new commits: Author: kgv Date: Wed Jul 10 23:24:05 2019 +0300 0030837: Data Exchange, XCAFPrs_DocumentExplorer - fix misprint in XCAFPrs_DocumentExplorerFlags_NoStyle check |
|
Please raise the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30837-master-KGV/ |
|
Branch CR30837 has been deleted by inv. SHA-1: e84724a2289d04007eeb72f634ce0ef0cdb1a24e |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-07-10 23:21 | kgv | New Issue | |
2019-07-10 23:21 | kgv | Assigned To | => kgv |
2019-07-10 23:21 | kgv | Relationship added | child of 0030692 |
2019-07-10 23:25 | git | Note Added: 0085578 | |
2019-07-11 10:37 | kgv | Note Added: 0085591 | |
2019-07-11 10:37 | kgv | Assigned To | kgv => bugmaster |
2019-07-11 10:37 | kgv | Status | new => resolved |
2019-07-11 10:38 | kgv | Status | resolved => reviewed |
2019-07-13 14:17 | bugmaster | Changeset attached | => occt master f6abd02c |
2019-07-13 14:17 | bugmaster | Status | reviewed => verified |
2019-07-13 14:17 | bugmaster | Resolution | open => fixed |
2019-07-13 14:31 | git | Note Added: 0085619 | |
2019-08-15 17:48 | bugmaster | Test case number | => Not required |